opam-version: "2.0"
homepage:     "https://github.com/mirage/mirage-crypto"
dev-repo:     "git+https://github.com/mirage/mirage-crypto.git"
bug-reports:  "https://github.com/mirage/mirage-crypto/issues"
doc:          "https://mirage.github.io/mirage-crypto/doc"
authors:      ["David Kaloper <dk505@cam.ac.uk>" "Hannes Mehnert <hannes@mehnert.org>"]
maintainer:   "Hannes Mehnert <hannes@mehnert.org>"
license:      "ISC"
synopsis:     "Post-Quantum Cryptography for MirageOS"
description: """
Mirage-crypto-pqc provides post-quantum cryptographic primitives,
currently implementing ML-KEM-768 (NIST FIPS 203) for key encapsulation.
"""

build: [ ["dune" "subst"] {dev}
         ["dune" "build" "-p" name "-j" jobs ]
         ["dune" "runtest" "-p" name "-j" jobs] {with-test} ]

depends: [
  "ocaml" {>= "4.13.0"}
  "dune" {>= "2.7"}
  "mirage-crypto-rng" {>= "1.0.0"}
  "alcotest" {with-test}
]
