opam-version: "2.0"
homepage:     "https://github.com/mirage/mirage-crypto"
dev-repo:     "git+https://github.com/mirage/mirage-crypto.git"
bug-reports:  "https://github.com/mirage/mirage-crypto/issues"
doc:          "https://mirage.github.io/mirage-crypto/doc"
authors:      ["David Kaloper <dk505@cam.ac.uk>" "Hannes Mehnert <hannes@mehnert.org>" ]
maintainer:   "Hannes Mehnert <hannes@mehnert.org>"
license:      "ISC"
synopsis:     "Feed the entropy source in an eio-friendly way"

build: [ ["dune" "subst"] {dev}
         ["dune" "build" "-p" name "-j" jobs ]
         ["dune" "runtest" "-p" name "-j" jobs] {with-test} ]

depends: [
  "base-domains"
  "dune" {>= "3.0"}
  "logs"
  "cstruct" {>= "6.0.0"}
  "duration"
  "eio"
  "mtime"
  "mirage-crypto-rng" {=version}
]
description: """

Mirage-crypto-rng-eio feeds the entropy source for Mirage_crypto_rng-based
random number genreator implementations, in an eio-friendly way.
"""
