opam-version: "2.0"
homepage:     "https://github.com/mirage/mirage-crypto"
dev-repo:     "git+https://github.com/mirage/mirage-crypto.git"
bug-reports:  "https://github.com/mirage/mirage-crypto/issues"
doc:          "https://mirage.github.io/mirage-crypto/doc"
authors:      ["David Kaloper <dk505@cam.ac.uk>" "Hannes Mehnert <hannes@mehnert.org>" ]
maintainer:   "Hannes Mehnert <hannes@mehnert.org>"
license:      "ISC"
synopsis:     "A cryptographically secure PRNG"

build: [ ["dune" "subst"] {dev}
         ["dune" "build" "-p" name "-j" jobs ]
         ["dune" "runtest" "-p" name "-j" jobs] {with-test} ]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.7"}
  "duration"
  "logs"
  "mirage-crypto" {=version}
  "mirage-crypto-rng" {=version}
  "mtime" {>= "1.0.0"}
  "lwt" {>= "4.0.0"}
]
description: """
Mirage-crypto-rng-lwt provides entropy collection code for the RNG using Lwt.
"""
