opam-version: "2.0"
homepage:     "https://github.com/mirage/mirage-crypto"
dev-repo:     "git+https://github.com/mirage/mirage-crypto.git"
bug-reports:  "https://github.com/mirage/mirage-crypto/issues"
doc:          "https://mirage.github.io/mirage-crypto/doc"
authors:      ["Romain Calascibetta <romain.calascibetta@gmail.com>" ]
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
license:      "ISC"
synopsis:     "Feed the entropy source in an miou.unix-friendly way"

build: [ ["dune" "subst"] {dev}
         ["dune" "build" "-p" name "-j" jobs ]
         ["dune" "runtest" "-p" name "-j" jobs] {with-test} ]

depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "2.7"}
  "miou"
  "logs"
  "mirage-crypto-rng" {=version}
  "duration"
  "mtime"
  "ohex" {with-test & >= "0.2.0"}
]
description: """
Mirage-crypto-rng-miou-unix feeds the entropy source for Mirage_crypto_rng-based
random number generator implementations, in an miou.unix-friendly way.
"""

pin-depends: [
  [ "miou.dev" "git+https://github.com/robur-coop/miou.git#b43d607e45fe35c2ab5e9ad1c50f22ada6d11c2a" ]
]
