opam-version: "2.0"
homepage:     "https://github.com/mirage/mirage-crypto"
dev-repo:     "git+https://github.com/mirage/mirage-crypto.git"
bug-reports:  "https://github.com/mirage/mirage-crypto/issues"
doc:          "https://mirage.github.io/mirage-crypto/doc"
authors:      ["Romain Calascibetta <romain.calascibetta@gmail.com>" ]
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
license:      "ISC"
synopsis:     "Feed the entropy source in a mkernel friendly way"

build: [ ["dune" "subst"] {dev}
         ["dune" "build" "-p" name "-j" jobs ]
         ["dune" "runtest" "-p" name "-j" jobs] {with-test} ]

depends: [
  "ocaml" {>= "5.0.0"}
  "dune" {>= "2.7"}
  "miou" {>= "0.2.0"}
  "logs"
  "mirage-crypto-rng" {=version}
  "duration"
  "digestif" {>= "1.2.0"}
  "mkernel"
]
description: """
Mirage-crypto-rng-mkernel feeds the entropy source for Mirage_crypto_rng-based
random number generator implementations, in a mkernel friendly way.
"""
x-maintenance-intent: [ "(latest)" ]
