opam-version: "1.2"
name:         "mirage-entropy-solo5"
homepage:     "https://github.com/mirage/mirage-entropy"
dev-repo:     "https://github.com/mirage/mirage-entropy.git"
bug-reports:  "https://github.com/mirage/mirage-entropy/issues"
author:       ["Hannes Mehnert" "David Kaloper" "Anil Madhavapeddy" "Dave Scott"]
maintainer:   "david@numm.org"
license:      "BSD2"

build: [
  ["ocaml" "pkg/pkg.ml" "build" "--pkg-name" name "--pinned" "%{pinned}%"]
]
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "topkg" {build & >= "0.7.6"}
  "cstruct" {>= "1.4.0"}
  "lwt"
  "mirage-solo5"
  "ocaml-freestanding"
]
tags: [ "org:mirage"]
available: [ ocaml-version >= "4.01.0" ]
