opam-version: "1.2"
name:         "mirage-entropy-xen"
homepage:     "https://github.com/mirage/mirage-entropy"
dev-repo:     "https://github.com/mirage/mirage-entropy.git"
bug-reports:  "https://github.com/mirage/mirage-entropy/issues"
author:       ["Hannes Mehnert" "David Kaloper" "Anil Madhavapeddy" "Dave Scott"]
maintainer:   "david@numm.org"
license:      "BSD2"

build: [
  ["ocaml" "pkg/pkg.ml" "build" "--pinned" "%{pinned}%"]
]
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "topkg" {build}
  "cstruct" {>= "1.4.0"}
  "mirage-xen" {>="2.2.0"}
]
tags: [ "org:mirage"]
available: [ ocaml-version >= "4.01.0" ]
