opam-version: "2.0"
homepage:     "https://github.com/mirleft/ocaml-nocrypto"
dev-repo:     "git+https://github.com/mirleft/ocaml-nocrypto.git"
bug-reports:  "https://github.com/mirleft/ocaml-nocrypto/issues"
doc:          "https://mirleft.github.io/ocaml-nocrypto/doc"
authors:      ["David Kaloper <dk505@cam.ac.uk>"]
maintainer:   "David Kaloper <dk505@cam.ac.uk>"
license:      "ISC"
synopsis:     "Simple crypto for the modern age"

build: [ ["dune" "subst"] {pinned}
         ["dune" "build" "-p" name "-j" jobs ]
         ["dune" "runtest"] {with-test} ]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build & >= "1.7"}
  "dune-configurator" {>= "2.0.0"}
  "cpuid" {build}
  "ounit" {with-test}
  "cstruct" {>="3.0.0"}
  "ocplib-endian"
  "zarith"
  "sexplib"
  "ppx_sexp_conv"
  ("mirage-no-xen" | ("mirage-xen" & "mirage-xen-posix" & "zarith-xen"))
  ("mirage-no-solo5" | ("mirage-solo5" & "ocaml-freestanding" & "zarith-freestanding"))
]

depopts: [ "unix" "lwt" "mirage-entropy" ]

conflicts: [
  "mirage-xen" {< "3.1.0"}
  "ocaml-freestanding" {< "0.4.1"}
]
