(library
 (name helper)
 (wrapped false)
 (modules helper)
 (libraries cstruct mirage-crypto-rng))

(executables
 (names speed)
 (modules speed)
 (libraries helper mirage-crypto mirage-crypto-rng mirage-crypto-rng.unix
   mirage-crypto-pk mirage-crypto-ec))

(executables
 (names digests)
 (modules digests)
 (libraries helper mirage-crypto mirage-crypto-rng nocrypto digestif sha cryptokit bos)
 (optional))

(executables
 (names ec)
 (modules ec)
 (libraries helper mirage-crypto mirage-crypto-rng mirage-crypto-ec callipyge rfc7748 hacl_x25519 bos)
 (optional))
