(copy_files# ../ec/native/*.c)

(rule
 (deps ../ec/cflags_optimized.sexp ../src/native/mirage_crypto.h
   ../src/native/bitfn.h Makefile p256_stubs.c)
 (targets libmirage_crypto_ec_freestanding_stubs.a)
 (action
  (no-infer
   (progn
    (run %{make})))))

(install
 (package mirage-crypto-ec)
 (section lib)
 (files libmirage_crypto_ec_freestanding_stubs.a))
