(library
  (name mirage_crypto)
  (public_name mirage-crypto)
  (modules mirage_crypto ccm cipher_block cipher_stream hash uncommon)
  (libraries mirage_crypto_native cstruct ocplib-endian)
  (private_modules ccm cipher_block cipher_stream hash uncommon))

(library
  (name mirage_crypto_native)
  (public_name mirage-crypto.native)
  (virtual_modules native)
  (modules native)
  (default_implementation mirage-crypto.native.unix))

(include_subdirs unqualified)
