(library
 (name test_common)
 (libraries mirage-crypto oUnit)
 (modules test_common))

(test
 (name test_symmetric_runner)
 (libraries test_common mirage-crypto oUnit)
 (package mirage-crypto)
 (modules test_base test_cipher test_hash test_hmac test_symmetric_runner))

(library
 (name test_common_pk)
 (libraries mirage-crypto-pk)
 (modules test_common_pk))

(test
 (name test_random_runner)
 (libraries test_common test_common_pk mirage-crypto mirage-crypto-pk mirage-crypto-rng.unix oUnit)
 (package mirage-crypto-pk)
 (modules test_random_runner))

(test
 (name test_pk_runner)
 (libraries test_common test_common_pk mirage-crypto-pk mirage-crypto-rng.unix oUnit)
 (package mirage-crypto-pk)
 (modules test_numeric test_dh test_dsa test_rsa test_pk_runner))
