(copy_files# ../src/native/*)

(library
  (name mirage_crypto_native_unix)
  (public_name mirage-crypto.native.unix)
  (modules native)
  (foreign_stubs
    (language c)
    (names misc
           md5 sha1 sha256 sha512 hash_stubs
           aes_generic aes_aesni ghash_generic ghash_pclmul
           des_generic
           entropy_cpu_stubs)
    (flags (:standard) (:include cflags.sexp)))
  (variant unix)
  (implements mirage_crypto_native))

(rule
  (deps (env_var MIRAGE_CRYPTO_ACCELERATE))
  (action (with-stdout-to cflags.sexp (run ../config/cfg.exe))))
