(copy_files# ../src/native/*)
(rule (copy# ../unix/native.ml native.ml))

(library
 (name mirage_crypto_xen)
 (modules native)
 (public_name mirage-crypto.xen)
 (optional)
 (libraries mirage-xen-posix native)
 (foreign_stubs
   (language c)
   (flags (:standard) (:include ../src/cflags.sexp) (:include cflags-xen.sexp))
   (names misc hash_stubs md5 sha1 sha256 sha512 aes_generic
          aes_aesni des_generic ghash_pclmul ghash_generic entropy_cpu_stubs))
 (variant xen)
 (implements mirage_crypto_native)
)

(rule (with-stdout-to cflags-xen.sexp (run ./cflags.sh)))
