(copy_files# ../src/native/*)

(library
 (name mirage_crypto_xen)
 (public_name mirage-crypto.xen)
 (optional)
 (libraries mirage-xen-posix)
 (foreign_stubs
  (language c)
  (names detect_cpu_features misc misc_sse hash_stubs md5 sha1 sha256 sha512
    aes_generic aes_aesni des_generic chacha poly1305-donna ghash_pclmul
    ghash_generic ghash_ctmul entropy_cpu_stubs)
  (flags
   (:standard)
   (:include ../src/cflags.sexp)
   (:include cflags-xen.sexp))))

(rule
 (with-stdout-to
  cflags-xen.sexp
  (run ./cflags.sh)))
