(copy_files# ../lib/native/*)

(library
 (name mirage_entropy_xen)
 (public_name mirage-entropy.xen)
 (optional)
 (libraries mirage-xen-posix)
 (c_flags (:include ../lib/cflags.sexp) (:include cflags-xen.sexp))
 (c_names entropy_cpu_stubs))

(rule (with-stdout-to cflags-xen.sexp (run ./cflags.sh)))
