(library
 (name mirage_crypto_rng_miou_unix)
 (public_name mirage-crypto-rng-miou-unix)
 (libraries miou miou.unix mirage-crypto mirage-crypto-rng mirage-crypto-rng.unix digestif duration mtime.clock.os logs)
 (modules mirage_crypto_rng_miou_unix pfortuna))

(library
 (name mirage_crypto_rng_mkernel)
 (public_name mirage-crypto-rng-mkernel)
 (libraries miou mkernel mirage-crypto mirage-crypto-rng digestif duration logs)
 (modules mirage_crypto_rng_mkernel))
