(executable
 (name discover)
 (modules discover)
 (libraries dune.configurator))

(rule
 (targets rng_c_flags.sexp)
 (action (run ./discover.exe)))

(library
  (name mirage_crypto_rng_unix)
  (public_name mirage-crypto-rng.unix)
  (modules mirage_crypto_rng_unix)
  (libraries mirage-crypto-rng unix)
  (foreign_stubs
    (language c)
    (names mc_getrandom_stubs)
    (flags (:include rng_c_flags.sexp))))
