(executable
 (name discover)
 (modules discover)
 (libraries dune-configurator))

(rule
 (targets rng_c_flags.sexp)
 (action
  (run ./discover.exe)))

(rule
 (targets cflags_warn.sexp)
 (action
  (run ../../config/cfg.exe)))

(library
 (name mirage_crypto_rng_unix)
 (public_name mirage-crypto-rng.unix)
 (modules mirage_crypto_rng_unix urandom getentropy)
 (libraries mirage-crypto-rng unix logs threads.posix)
 (foreign_stubs
  (language c)
  (include_dirs ../../src/native)
  (names mc_getrandom_stubs))
 (c_library_flags
  (:include rng_c_flags.sexp)))

(env
 (dev
  (c_flags (:include cflags_warn.sexp))))
